module(name = "dupman")

bazel_dep(name = "rules_go", version = "0.44.0", repo_name = "io_bazel_rules_go")
bazel_dep(name = "gazelle", version = "0.35.0")
bazel_dep(name = "rules_jvm_external", version = "5.3")
bazel_dep(name = "rules_oci", version = "1.5.1")
bazel_dep(name = "rules_pkg", version = "0.7.0")

# Setup Go.
go_sdk = use_extension("@io_bazel_rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(version = "1.19")

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")
use_repo(
    go_deps,
    "com_github_chromedp_cdproto",
    "com_github_chromedp_chromedp",
    "com_github_coreos_go_oidc_v3",
    "com_github_gin_contrib_zap",
    "com_github_gin_gonic_gin",
    "com_github_go_playground_validator_v10",
    "com_github_go_resty_resty_v2",
    "com_github_golang_jwt_jwt_v5",
    "com_github_google_uuid",
    "com_github_jinzhu_copier",
    "com_github_mcuadros_go_defaults",
    "com_github_rabbitmq_amqp091_go",
    "com_github_redis_go_redis_extra_redisotel_v9",
    "com_github_redis_go_redis_v9",
    "com_github_spf13_viper",
    "in_gopkg_mail_v2",
    "io_gorm_driver_postgres",
    "io_gorm_gorm",
    "io_gorm_plugin_opentelemetry",
    "io_opentelemetry_go_contrib_instrumentation_github_com_gin_gonic_gin_otelgin",
    "io_opentelemetry_go_otel",
    "io_opentelemetry_go_otel_exporters_otlp_otlpmetric_otlpmetricgrpc",
    "io_opentelemetry_go_otel_exporters_otlp_otlptrace_otlptracegrpc",
    "io_opentelemetry_go_otel_metric",
    "io_opentelemetry_go_otel_sdk",
    "io_opentelemetry_go_otel_sdk_metric",
    "io_opentelemetry_go_otel_trace",
    "org_golang_google_grpc",
    "org_golang_x_oauth2",
    "org_uber_go_fx",
    "org_uber_go_zap",
)

# Setup Java.
maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")

keycloak_version = "21.1.1"

maven.install(
    artifacts = [
        "org.keycloak:keycloak-server-spi:%s" % keycloak_version,
        "org.keycloak:keycloak-server-spi-private:%s" % keycloak_version,
        "org.keycloak:keycloak-services:%s" % keycloak_version,
    ],
    lock_file = "//:maven_install.json",
)
use_repo(
    maven,
    "maven",
    "unpinned_maven",
)

# Setup OCI.
oci = use_extension("@rules_oci//oci:extensions.bzl", "oci")
oci.pull(
    name = "distroless_base",
    digest = "sha256:6c1e34e2f084fe6df17b8bceb1416f1e11af0fcdb1cef11ee4ac8ae127cb507c",
    image = "gcr.io/distroless/base",
    platforms = [
        "linux/amd64",
        "linux/arm/v7",
        "linux/arm64/v8",
        "linux/ppc64le",
        "linux/s390x",
    ],
)
use_repo(oci, "distroless_base")
