module(name = "dupman")

bazel_dep(name = "rules_go", version = "0.44.0")
bazel_dep(name = "gazelle", version = "0.35.0")

# Setup Go.
go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(version = "1.19")

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")
use_repo(
    go_deps,
    "com_github_chromedp_cdproto",
    "com_github_chromedp_chromedp",
    "com_github_coreos_go_oidc_v3",
    "com_github_gin_contrib_zap",
    "com_github_gin_gonic_gin",
    "com_github_go_playground_validator_v10",
    "com_github_go_resty_resty_v2",
    "com_github_google_uuid",
    "com_github_hashicorp_vault_api",
    "com_github_hashicorp_vault_api_auth_approle",
    "com_github_jinzhu_copier",
    "com_github_mcuadros_go_defaults",
    "com_github_ory_client_go",
    "com_github_rabbitmq_amqp091_go",
    "com_github_redis_go_redis_extra_redisotel_v9",
    "com_github_redis_go_redis_v9",
    "com_github_spf13_viper",
    "in_gopkg_mail_v2",
    "io_gorm_driver_postgres",
    "io_gorm_gorm",
    "io_gorm_plugin_opentelemetry",
    "io_opentelemetry_go_contrib_instrumentation_github_com_gin_gonic_gin_otelgin",
    "io_opentelemetry_go_contrib_instrumentation_net_http_otelhttp",
    "io_opentelemetry_go_otel",
    "io_opentelemetry_go_otel_exporters_otlp_otlpmetric_otlpmetricgrpc",
    "io_opentelemetry_go_otel_exporters_otlp_otlptrace_otlptracegrpc",
    "io_opentelemetry_go_otel_metric",
    "io_opentelemetry_go_otel_sdk",
    "io_opentelemetry_go_otel_sdk_metric",
    "io_opentelemetry_go_otel_trace",
    "org_golang_google_grpc",
    "org_golang_x_oauth2",
    "org_uber_go_fx",
    "org_uber_go_zap",
)
